<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/support_overlay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jet_brains_mono__bold"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/support_overlay_title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!-- Phone Number -->
    <LinearLayout
        android:id="@+id/phone_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/desc_phone_icon"
            android:src="@drawable/img_phone"
            app:tint="@color/green"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/jet_brains_mono__bold"
            android:text="@string/support_number"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/desc_forward"
            android:src="@drawable/img_arrow"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <!-- Email -->
    <LinearLayout
        android:id="@+id/email_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/desc_email_icon"
            android:src="@android:drawable/ic_dialog_email"
            app:tint="@color/green"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/email_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/jet_brains_mono__bold"
            android:text="@string/support_mail"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/desc_forward"
            android:src="@drawable/img_arrow"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>
</LinearLayout> 